# ChangeLog for app-portage/portage-utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.159 2015/02/21 15:47:17 mgorny Exp $

  21 Feb 2015; Michał Górny <mgorny@gentoo.org> portage-utils-0.10.ebuild,
  portage-utils-0.11.ebuild, portage-utils-0.20.ebuild,
  portage-utils-0.21.ebuild, portage-utils-0.3.1.ebuild,
  portage-utils-0.30.ebuild, portage-utils-0.4.ebuild,
  portage-utils-0.40.ebuild, portage-utils-0.41.ebuild,
  portage-utils-0.5.ebuild, portage-utils-0.50.ebuild,
  portage-utils-0.51.ebuild, portage-utils-0.52.ebuild,
  portage-utils-0.6.ebuild, portage-utils-0.8.ebuild, portage-utils-0.9.ebuild:
  Replace HOMEPAGE with something semi-meaningful, https://github.com/gentoo
  /gentoo-portage-rsync-mirror/pull/26 by Michael Mair-Keimberger.

  20 Feb 2015; Mike Frysinger <vapier@gentoo.org> portage-utils-0.53.ebuild:
  Use wiki for HOMEPAGE #534468 by Alex Legler.

  26 Apr 2014; Mike Frysinger <vapier@gentoo.org> portage-utils-0.53.ebuild:
  Stabilize for all.

*portage-utils-0.53 (22 Mar 2014)

  22 Mar 2014; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.53.ebuild:
  Fix crash in `qdepends -q` #504636 via Chromium OS.

*portage-utils-0.52 (15 Mar 2014)

  15 Mar 2014; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.52.ebuild:
  Fix crash in `qdepends -Q` #504636 by josef.95.

*portage-utils-0.51 (11 Mar 2014)

  11 Mar 2014; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.51.ebuild:
  Bug fix release.

*portage-utils-0.50 (10 Mar 2014)

  10 Mar 2014; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.50.ebuild:
  Version bump.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> portage-utils-0.41.ebuild:
  Add arm64 love.

  10 Jan 2014; Mike Frysinger <vapier@gentoo.org> portage-utils-0.41.ebuild:
  Stabilize for all.

  07 Jan 2014; Mike Frysinger <vapier@gentoo.org> portage-utils-0.41.ebuild:
  Add epatch_user support.
