@@ -19,6 +19,7 @@ DIST portage-utils-0.50.tar.xz 403932 SHA256 c63b6aa5de31cd6b216025c15dd7074716e
 DIST portage-utils-0.51.tar.xz 403588 SHA256 a3bd492788dfd1157d0b8145f096e8d45492914905329aa4cc9eb9d0526be131 SHA512 03433794102a0f195246f078fd261c3f9e1645edab2b7ddd0647fb3e46596e8e7d391f77e74e3754f07f569a9d331f2b0656bd2e1c57adab6dd75644db893020 WHIRLPOOL 3f47ab0605f22aaa354eccd5bbd588d9e761fddb0ad346e95695b160ee193c40ae11ca394c49c5986b85018ce0762a29d0bf62fb9a3466b9a391f27ee6d4c237
 DIST portage-utils-0.52.tar.xz 403684 SHA256 2869e77b043f68184ee35f0a77d3ce552c0cc75b67d9b2c67965f89d62922fac SHA512 de4fbc4d660e73d1b5e769a3c920dbf21984f00cee91d06269b8c0349aeaff15b9165e725e449ad2491e7095494e01f845a54315bc3a48b8cb02adeb20661e7f WHIRLPOOL decdfdfe75c08a71b0d00ffe7b087874e66c993a9ac1df19c5d16e2255aaf887156e17e9497b47faec7f94d1f8ff8ba8c2e87f5714c0df50b095faafee2c2605
 DIST portage-utils-0.53.tar.xz 404040 SHA256 876653e795af89aeadfac1206403b1ed9543f3ac75232459d4e597e20f236c04 SHA512 5965c39572dd476bde2668a4a643d6c44da47d822f75201efbaf10a8dbb02a5bb0210ef95519b99d762106caf6f3440f78312327516d33fa8551139104483259 WHIRLPOOL 115f9e67962b890e9027ba2b16ffb7c282426a514a0272e279fb2d171152cd54638e6fb94df4121f72d84b59ed3713e05d177ed29cacddd0070d555671d21e42
+DIST portage-utils-0.54.tar.xz 510528 SHA256 d3cd50e822253008c83e871ee53e83f4fa3dcfbfa25799ec48a8dcf37ac67928 SHA512 4e7b01cff96744f767a0892df5fd2f28c17a619aac1912a2f1ebb91c0706367cb02eb478e9192e6f4fb9a22956d8fb6256497b03086938f26efcd0ba27e8c1ff WHIRLPOOL 04ea363f9867896226040c9011168ea2755f67706400f9a1d183e1a8a46e97dd9f8ff3e225c933d8c01d609da72c2a2ed7ec15b050bee4c5fbd12f187b1dabf1
 DIST portage-utils-0.6.tar.xz 101672 SHA256 1c902be00679910c04cf70ef2d765388213c7bb339ffd47c660e681a6eac88a1 SHA512 b6b11741bf6bd94f9dbd5418468c47f1410ef192ad37f8764364869c52ce9dbb15db12099965d06e0daf4c26d214b12e230f2c85ce1e00fc85d1415b93ec81e5 WHIRLPOOL f0c21db0a32859f80695280a97ba90327c30aa691c68be5ec224f9a2d389cd3042becef31fd896596281404f86f80fb0ab15f33bf56206711363771bf815cfb7
 DIST portage-utils-0.8.tar.xz 378220 SHA256 d7a0dd6f8afc959f965a0dfcba12e808f623035cf1a38f3be4a5765d42174c74 SHA512 991dd836862a856d248bb93100ab94c0365d3fc3caf10931119565c108cb8085cf4aaa8779ae77b2c98fe3a4d26c8585c9d00d645c1bacb6b2b7bf18158fb6cd WHIRLPOOL f529986e4479ac834d220a40734655434d0fe262d1dec2ff1eaeeb44c2c356caf6bcf90afaeb8727e5b98c873d8f1b7133896ea9029f2dc1b13b04c4c0dee943
 DIST portage-utils-0.9.tar.xz 378044 SHA256 dc6ca6c8394a17e47966e7a5aa21030690abd80e493e59780b85c561307c4c58 SHA512 15982f2e55f5307ea82076b53ca604f2a5e683836cfb669e05fb1cf8a18889d82223a05748b745e179dc6c1bb9f88b08460717a9a7eae5ce5d31a0b7d70290cc WHIRLPOOL cfaab6d47ca15662888f3492001507f9c3dc29694a2f3fd44268eee7c9bfb83cb3a31d6fb7ce25b49d8ced311f6ea60828ad1c62f635bae1f35b20e0c2275bd4
@@ -36,28 +37,26 @@ EBUILD portage-utils-0.50.ebuild 2371 SHA256 9ce49ada862547ec583d08ebbfd6949e77f
 EBUILD portage-utils-0.51.ebuild 2371 SHA256 878decff28ea09c36de939507c2ec20c1ab777177baac9da24ab20a8e7968828 SHA512 849d9de3bfacfa754863f31034d8033ec7d0699f0e1bcfdceb760ea5f99a97e3f7639cf601a667171a6305f27e4384cb9b476f45bf87f9683e4c87ab5b060092 WHIRLPOOL 10afc272d17d0d8610bf82b11ced329f20a7f5df3b2ec0b57f2e34abdac36f730ec856c10e8026d30da15d3a8e9b849d64440176a5020ffe0ab3fc1c78b643bd
 EBUILD portage-utils-0.52.ebuild 2371 SHA256 286e5d18e459557137c90ddd605e61fc9668556918e98e5a37e9d7f912cdc4e9 SHA512 933f181e203d2a78309140009e239ecaad18ca8c6e9eaab30742eaa425c60a46b1fc6aee07d6b417414dd4f43c91d9a72c4db0c8593fd767c54e7ece52fee22e WHIRLPOOL cff0b38e492a2494296e859af27ae56e72e053f2f73096945139b37868766610d9cc96235e3ce3b16d298d3ad9bd360fa5dcd482d9feb77c4b7d0f272d766fa7
 EBUILD portage-utils-0.53.ebuild 2362 SHA256 0611dbaed499534a5dd32df9f3fa56b200ae0f50f530302f56eea663451b56f8 SHA512 b54d5fdd23082321358fe35b6bbaaef267fcf0a674ab0fca591bcef59a1b4b006b31b700665f594eeb028d9753e165f28a61964e48301a287ce42c21726d0944 WHIRLPOOL 61a68d3b2c30eea5fc7ca7cc0dce2e73e56801ac1585ade39d01f0461d9ca0cb65acf7100b0ebee563fff9808fa45bdf5abd9c6bb4652285bc2cb9141c03a6de
+EBUILD portage-utils-0.54.ebuild 2375 SHA256 1876cbdb2fd4319ab18d91331712c8a9e0f2afb0030e0b11672805f2ce3fe3c4 SHA512 ebe2892045a93af7c2edf05718d82f76fc69680e5f8815a32d58d56406e05fbfae20fcd02b0efc4caab303c5487876cdcdb79d62824bde274025d6459f243682 WHIRLPOOL 756753c4d13b2632a78396b2049801574e52b976a68f1d78a819e66bbcd4b475456df29265e22c42c2dafc6ee58717889b038af3df35c8ca6cd4b66a3afc5e2b
 EBUILD portage-utils-0.6.ebuild 1502 SHA256 fe9a27076d60f3a80f641eade35d70c75327273c469a80f7fb7347ad0127e0ad SHA512 d466387e0dd461cf0f2a7c9a2d28b1e0eccd006a7bb6c52ffcd6d3a7a04aaa84767aaea0d96db03a9fb4fa96266d24ce80331ebe33035f383940c8091f66a702 WHIRLPOOL 616961a53c4b99704082e185b2214231def1ff8da3661a59f99b05f9e636e8f638acaf380a62a33b172cfc29cbc3d0b115bf98945a752dd55622d40e6e1d2f30
 EBUILD portage-utils-0.8.ebuild 1672 SHA256 7635064e89509a266cffd91c30742e36cdb9c63c6e85539860241ca49db30397 SHA512 b5b83e9c98a9cccb5a6944f9304230e0d63e7a0db6198a00499b61f143f59c8c3f1e802c625971447489cf2adeebb05c186678243198abaaab225d47d03d1a39 WHIRLPOOL 8096715ce8c2dfcd6ae4ad62f5752f08e49ad340ac8a41c8dab55d56e5d48c77c820eac734aa34da19a2100b745ccbf38d77a936993567df63040a106849c981
 EBUILD portage-utils-0.9.ebuild 2171 SHA256 f2ccf0cf70c3f02ec5764a75432a60c46c91a99263b830235e61c6b50d7a15cd SHA512 5cf29872ebb8498714e73aa87a4ee75fa48064227c9136ee4744cb667df1d95b97593b975f0c088cdeba0b7fe2a64a6af43dfb495d7ac7767e5e6ee1eabd0fee WHIRLPOOL dc681da3922f4bce8517cd98312cdc2a7bc6c5f9151ad30bebf3287ab3d88d275d7d241e964250fa77184d7e93d5a7be3c6a762b7c8e94f61248b2861dcb0a58
-MISC ChangeLog 27445 SHA256 d378d91d405f72ec60b14868af02f66326e84978b9334d1dcc55d52dbeb4505e SHA512 8b7381660aefca50396ef73445c3612b631608c14f672a628175dbce9f3d24cc2bfbb2151b2ff37799a02b96f1b5c26cec5ecd67dc3750b4c36cd0049cd73509 WHIRLPOOL 13a50667449ee84bb603e5667add84253d30cd62a69a2b9da6dff55891c0c310d7cdd8417d8f5c9acb99a224bea228c471f6d0ff5b905969cd943f0291d1a975
+MISC ChangeLog 27575 SHA256 ac44e08279d172be00942b039f332c3e7e6c6e18bd45ca6cedf887dc04634d17 SHA512 2a5f1f3df9bd09fb356a6cc6975a507713c7950b448dee959259bf1d186e4aaf7a90e875a68fc5e2c8091736132eaaa81a618057da92b94b684c784b7298ffc3 WHIRLPOOL 2778aeb7d053d7174178e89136052acd918933200ac730d665539337ccb99dd20b5219936dd344137a36f68843679922f86fd8918213939687b16ffe80aea84f
 MISC metadata.xml 207 SHA256 7e42d8d20b999858f3b4dc74e47877952491faecaa3674f4dd54b5d0c5045867 SHA512 42a980e5a2cde735b41dc5f0d225ae3377fde12bdff944fd9f57b8c11c9990e559b52eff81a686c83a6d03d3a1e6ff924b622b2631a46916ad47f9f6986c2951 WHIRLPOOL 0f0513644cd692a015cef3368825ee03e85c82ac0e8fc328911c3e2c05bbe200ebc63cafc2fee65c389d6b6774206486ca74a21d597a2975147948b50e220670
-MISC portage-utils-0.53.ebuild.rej 466 SHA256 0da936006ffd043ffe9e811676a678b751ee70ad2bee676c0ece81b58c4eead6 SHA512 552e9d24c66e39fa70e1e57d1bacf23aafb71ad42139647eb2969d65aa430486b29a856007236e67378cd470fddc0a9bb3d8ee41b2df3d879d0e6ec5523234d6 WHIRLPOOL d8b1c9ff874c3a8ed9213f231e640f5b9d8729fc89900d9890684f4e94904c54485e1212adb7476fc1b95591d6d43c8e46dc52f74d24b57a4e90c649bcdde012
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU6KiNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOLnAP/2ckT/svD2PPbvWeFVsYupxe
-vEI3mIzCkAU7AsIMdJm+4qrlnJR6FJ8tH9mZw2KEkXRK4gfYaMZOv8q/jPmFLxLj
-0CoecNZPmRh/+JH0boNJf9UG00RWlB3os3NBMarthkVoernjZkEnDtmFRZRAGuev
-gFtcsQbqEyoSWYGEG0pCbWRIutCIlucMgqd9872FxaH3kUdh9OjDiL7TbwLHbB51
-4y+DSyNdrCH8qDQXW8nLgjjjMQhaeJNeBRWHNRp3HWOwGdA2O2LVgxh3GuS5tZhK
-VeJP5/uAkQGm7u4h+0XeJnklvdU6kdnquuGXHXKezQHesw1Xct93+NIqnW3DF1CL
-/z7clVHWdGs4hYafdh08Guue1IAEg9tmeApOUMsH3VTkUR6tYDd50uDE6M8eAD3h
-hGk9ZMxm687gxmXzub8AI2nGy3CRmhLXH94KM2E2GSLAQETLTia2OxBkx9NaF+nj
-CPhL3vO+gTffm1d3z5V0xN9XFeympOTpW7HH5l+IcISvf8tjW79294ZTK3vwG6gk
-GZZWUSbuRL9+PpXrdJ+ZuFDWzIW4w1pm1JX7dJanOl/OqsGkrkzl86YDlR8ZHVmO
-aoWVbG2ses/DlkwpfvktStm0BUJgYt48gLQUhxVVwqTgS1Pwiri8AiG+zhrWo6ME
-8QJ1+rXKygwiPTsd1G9M
-=3DOX
+iQIcBAEBCAAGBQJU69MyAAoJEPGu1DbS6WIA1BwP/jNAjO6lA0njphH+g0bZHLeP
+aHJebEuBS7BgutwyA+OQdC/hQxOTZjzxmOU1fhHE9w3LxPohRasxa5IRgZYbdFEu
+ftKbGfs/tN4q0+Z3qHoQiIIVwbnh6h73bGcBx4lawTjcK7RVePK8nk6A7035qonq
+PbDW2rHyBuByN4nldQBJO6YXOBaZTq+2LX5KeBU4RXv7ym2FyfSw6TBoBHXQ6q1U
+W38ml+nsGKi2qjOqNSM7WFxPWMQkSKeZTpzNkmEmlvToDidG5l843rFeV5Xp6HqT
+34lN14y3Wu43b5bU/Yuh7jeeBJBHZE9Rp/myjl+HKdDv7gkK5xP2Yi6mnBiw/2FG
+lEur3j2faP+zJKQdvdVJ9/wUxJ3h8qCefziU0kYIbjLIhjpA25MyTrSONk/vMASh
+s+VvffY/yNavdIR3NMaxHiHgyvAcWgXMFSISZVWrMIXl/SzTm2oz19U4oIPFD4m7
+x1kpgAuZ/ZGumEj2tHoZWZkHAil00uhhpFESPTxGIvys8V7w+ti2Kkatd2vnxC2J
+iBrlsjE+vHVPMeyggbPLh79TxkM7WZ1///sH6wpgDrO5c/iE/wak+OUHwnJ26DQi
+OoNkfcd79hKTkiO6M3WNxhNyJQAFpfcO+HLKZ7xI5cr06z6EztnGawBVpuFzTuRh
+MV8Gmb8Ud794wUyukBCO
+=jmzF
 -----END PGP SIGNATURE-----
