@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst preinst prepare
+DEPEND=app-arch/xz-utils
+DESCRIPTION=small and fast portage helper tools written in C
+EAPI=4
+HOMEPAGE=https://wiki.gentoo.org/wiki/Portage-utils
+IUSE=nls static
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=GPL-2
+SLOT=0
+SRC_URI=mirror://gentoo/portage-utils-0.54.tar.xz http://dev.gentoo.org/~vapier/dist/portage-utils-0.54.tar.xz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=067f508629b27dc1e7a1f3ab7eabc965
