@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/portage-utils
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.159 2015/02/21 15:47:17 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.160 2015/02/24 01:26:08 vapier Exp $
+
+*portage-utils-0.54 (24 Feb 2015)
+
+  24 Feb 2015; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.54.ebuild:
+  Version bump.
 
   21 Feb 2015; Michał Górny <mgorny@gentoo.org> portage-utils-0.10.ebuild,
   portage-utils-0.11.ebuild, portage-utils-0.20.ebuild,
